Ingress_Controller/Eflyer-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Eflyer
spec:
  selector:
    matchLabels:
      app: Eflyer
  template:
    metadata:
      labels:
        app: Eflyer
    spec:
      containers:
      - name: Eflyer
        image: venkeyboda/k8s-deploy:2.0
        resources:
          requests:
            memory: "100M"
            cpu: "10m"  
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: Eflyer
spec:
  selector:
    app: Eflyer
  ports:
  - port: 80
    targetPort: 80
