Ingress_Controller/game_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: venkeyboda/game:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: game
spec:
  selector:
    app: game
  ports:
  - port: 80
    targetPort: 80
